# http-basic-auth-middleware

./: CHANGELOG.md  README.md  pyproject.toml
http_basic_auth/: __init__.py  http_basic_auth.py
tests/: test_http_basic_auth.py
